--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,11 +1,18 @@
-FROM arm64v8/ubuntu:focal
+FROM debian:sid AS build
+
+ARG host_tool
+ARG target_tool
+ARG version
+ARG termux
+
+ARG DEBIAN_FRONTEND=noninteractive
 
 COPY . /home/lang
-#COPY ../x-toolchain-1.00-aarch64/ /home/lang/
-
-#ARG DEBIAN_FRONTEND=noninteractive
+COPY "$host_tool" /home/lang/
+COPY "$target_tool" /home/lang/
 
 RUN uname -m
 WORKDIR /home/lang
-RUN ./bin/build.sh ./x-toolchain-1.00-aarch64 v1.01-arm64
-
+RUN rm -rf ./build
+RUN ./bin/cross_env.sh
+#RUN ./bin/cross.sh $host_tool $target_tool $version $termux
