--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on: [push]
 env:
   last_version: '1.00'
   new_version: '1.01'
+  publish: false
 
 jobs:
   build:
@@ -14,8 +15,9 @@ jobs:
         run: |
           echo "toolchain_dir=x-toolchain-${last_version}-$(uname -m)" >> $GITHUB_ENV
           echo "toolchain_arm64_dir=x-toolchain-${last_version}-aarch64" >> $GITHUB_ENV
-          echo "tool_x86_64_zip=x-toolchain-${new_version}-x86_64.zip" >> $GITHUB_ENV
-          echo "tool_arm64_zip=x-toolchain-${new_version}-aarch64.zip" >> $GITHUB_ENV
+          echo "tool2_x86_64_zip=x-toolchain-${new_version}-x86_64.zip" >> $GITHUB_ENV
+          echo "tool2_arm64_zip=x-toolchain-${new_version}-aarch64.zip" >> $GITHUB_ENV
+          echo "tool3_x86_64_zip=x-toolchain-${new_version}-stage2-x86_64.zip" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
       - name: "download toolchain"
@@ -28,7 +30,6 @@ jobs:
 
       - name: build-x86_64
         id: build_x86_64
-        if: true
         run: |
           bin/build.sh $toolchain_dir $new_version
 
@@ -36,13 +37,12 @@ jobs:
         if: ${{ steps.build_x86_64.outcome == 'success' }}
         uses: actions/upload-artifact@v4
         with:
-          name: toolchain-x86_64
-          path: ${{ env.tool_x86_64_zip }}
+          name: ${{ env.tool2_x86_64_zip }}
+          path: ${{ env.tool2_x86_64_zip }}
           compression-level: 0
 
       - name: build-arm64
         id: build_arm64
-        if: true
         run: |
           unzip $toolchain_arm64_dir.zip
           ./bin/docker.sh $toolchain_dir $toolchain_arm64_dir $new_version
@@ -51,18 +51,30 @@ jobs:
         if: ${{ steps.build_arm64.outcome == 'success' }}
         uses: actions/upload-artifact@v4
         with:
-          name: toolchain-aarch64
-          path: ${{ env.tool_arm64_zip }}
+          name: ${{ env.tool2_arm64_zip }}
+          path: ${{ env.tool2_arm64_zip }}
           compression-level: 0
 
+      - name: build-x86_64 stage2
+        id: build_x86_64_2
+        run: |
+          XOPT="-O2" bin/build.sh x-toolchain-${new_version}-x86_64 "${new_version}-stage2"
+
+      - name: Upload Artifacts stage2 x86_64
+        if: ${{ steps.build_x86_64_2.outcome == 'success' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.tool3_x86_64_zip }}
+          path: ${{ env.tool3_x86_64_zip }}
+          compression-level: 0
 
       - name: Create Release
-        if: ${{ false && env.new_version != env.last_version }}
+        if: ${{ env.publish == 'true' && env.new_version != env.last_version }}
         id: create_release
         uses: actions/create-release@v1
         with:
           tag_name: v${{ env.new_version }}
-          release_name: toolchain for v${{ env.new_version }}
+          release_name: v${{ env.new_version }}
           draft: false
           prerelease: false
         env:
@@ -70,7 +82,7 @@ jobs:
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
-        if: ${{ false && env.new_version != env.last_version }}
+        if: ${{ env.publish == 'true' && env.new_version != env.last_version }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: x-toolchain-${{ env.new_version }}-x86_64.zip
@@ -78,26 +90,3 @@ jobs:
           asset_content_type: application/zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build-arm:
-    runs-on: ubuntu-24.04-arm
-    needs: build
-    if: false
-    steps:
-      - name: "set env"
-        run: |
-          echo "toolchain_dir=x-toolchain-${last_version}-$(uname -m)" >> "$GITHUB_ENV"
-          echo "toolchain_arm64_dir=x-toolchain-${last_version}-aarch64" >> "$GITHUB_ENV"
-
-      - uses: actions/checkout@v4
-      - name: "download toolchain"
-        run: |
-          gh auth status
-          gh release download v${last_version}&&echo "download toolchain '$toolchain_arm64_dir'"
-          unzip $toolchain_arm64_dir.zip
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "build-arm64"
-        run: |
-          bin/build.sh $toolchain_arm64_dir $new_version
