--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: build-x86_64
         id: build_x86_64
         run: |
-          XOPT="" XSTAGE="1" XPERF="1" bin/build.sh $toolchain_dir $new_version
+          XOPT="" XSTAGE="1" bin/build.sh $toolchain_dir $new_version
 
       - name: Upload Artifacts x86_64
         if: ${{ steps.build_x86_64.outcome == 'success' }}
